main/default/objects/Meeting_Application__c/Meeting_Application__c.object-meta.xml
<CustomObject>
    <label>Meeting Application</label>
    <nameField>
        <label>Meeting Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>