main/default/objects/Meeting_Application__c/fields/Access_Key__c.field-meta.xml
<CustomField>
    <fullName>Access_Key__c</fullName>
    <description>Access Key</description>
    <label>Access Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>