main/default/objects/Meeting_Application__c/fields/Compass_Setting__c.field-meta.xml
<CustomField>
    <fullName>Compass_Setting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compass Setting</label>
    <referenceTo>Compass_Setting__c</referenceTo>
    <relationshipLabel>Meeting Applications</relationshipLabel>
    <relationshipName>Online_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>