main/default/objects/Meeting_Application__c/fields/Default_Meeting_URL__c.field-meta.xml
<CustomField>
    <fullName>Default_Meeting_URL__c</fullName>
    <description>Default Meeting URL</description>
    <label>Default Meeting URL</label>
    <type>Url</type>
</CustomField>