main/default/objects/Meeting_Application__c/fields/Live__c.field-meta.xml
<CustomField>
    <fullName>Live__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Live</label>
    <type>Checkbox</type>
</CustomField>