main/default/objects/Meeting_Application__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amazon Chime</fullName>
            </value>
            <value>
                <fullName>Microsoft Teams</fullName>
            </value>
            <value>
                <fullName>Zoom Meetings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>