main/default/objects/Meeting_Application__c/fields/Use_as_Default__c.field-meta.xml
<CustomField>
    <fullName>Use_as_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use as Default</label>
    <type>Checkbox</type>
</CustomField>